version 0.991
- streamline the online help system
- in GUI, allow deletion of any variable (popup menu)
- go to a two-dimensional data array (needs more testing)
- get the data status indicator working better when the nulldata
  command is used
- add menu items to set missing value codes for a particular
  series or the entire data set
- changing or clearing the data set now closes all model and
  stats windows (prevents crashes and garbage)
- add scalar datatype
- add progress indicator for reading/writing large data files
- add a refresh to the remote databases window after down-
  loading and installing a database

02/27/2002 version 0.99
- add option for HTTP proxy when contacting gretl data server
- fix bugs in drag and drop under Windows
- fix crashing bug when trying to save a data file with over
  (about) 120 variables
- fix bug in editing new data header info
- add mechanism to record sample when estimating a model, so
  that subsequent tests on that model can be referred to the same 
  sample
- add "native" printing of window contents under win32 and
  gnome
- enhance boxplots command, allowing for boolean expressions
  to limit the sample for individual plots in a comparative
  group of plots
- add editing toolbar to editable windows with search/replace
  and undo
- add context help (click on a command and press the "?" button)
  for the edit command script window
- correct typos in supplied data files data3-2 and data8-3
- add "critical" command (gretl console and GUI script mode only),
  to print critical values for a selected distribution
- add pvalue() function to the set of options available under
  the genr command
- improve handling of scripts opened in the GUI (including a
  prompt to save before running if changes have been made)

02/11/2002 version 0.98
- fig bug affecting frequency distributions and the test for
  normality of residuals
- improve functionality relating to saving of data files
- fix some build problems