@@ -63,7 +63,7 @@
 	  </row>
 	  <row>
 	    <entry>MS Windows</entry>
-	    <entry>wgnupl32.exe</entry>
+	    <entry>wgnuplot.exe</entry>
 	    <entry>latex, xdvi</entry>
 	    <entry>RGui.exe</entry>
 	  </row>
