@@ -1,7 +1,7 @@
 version 0.991
 - streamline the online help system
 - in GUI, allow deletion of any variable (popup menu)
-- go to a two-dimensional data array (needs more testing)
+- go to a two-dimensional data array
 - get the data status indicator working better when the nulldata
   command is used
 - add menu items to set missing value codes for a particular
@@ -12,6 +12,10 @@ version 0.991
 - add progress indicator for reading/writing large data files
 - add a refresh to the remote databases window after down-
   loading and installing a database
+- add handling for daily data (probably needs more work)
+- update to gnuplot 3.7.2 in win32 distribution
+- prepare the program sources for internationalization via
+  GNU gettext; add a blank .pot file to the source package
 
 02/27/2002 version 0.99
 - add option for HTTP proxy when contacting gretl data server
